fixed table align ment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -774,6 +774,10 @@ img.align-center {
   margin: 0 !important;
 }
 
+.d-block {
+  display: block;
+}
+
 .m-auto {
   margin: auto;
 }
